# doge-code

./: .dogeignore  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LLM_RESPONSE_DISPLAY_FIX.md  QWEN.md  README.ja.md  README.md  test_file.txt
elisp/: doge-code.el  doge-mcp.el  emacs-integration.md
resources/: system_prompt.md
resources/tree-sitter-language-pack/: go-tags.scm  javascript-tags.scm  python-tags.scm  rust-tags.scm  typescript-tags.scm
src/: analysis.rs  assets.rs  diff_review.rs  exec.rs  llm.rs  logging.rs  main.rs  main_test.rs  tools.rs  tools_tests.rs  tui.rs  tui_tests.rs  utils.rs  watch.rs
src/analysis/: analyzer.rs  c_collector.rs  cache.rs  collector.rs  cpp_collector.rs  csharp_collector.rs  csharp_collector_test.rs  file_finder.rs  go_collector.rs  hash.rs  language_config.rs  md_collector.rs  mod.rs  parser.rs  python_collector.rs  rust_collector.rs  symbol.rs  symbol_utils.rs  tests.rs  ts_js_collector.rs
src/analysis/database/: connection.rs  dao.rs  dao_conversions.rs  entities.rs  migration.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs  test.rs  tests.rs
src/features/: worktree_manager.rs
src/hooks/: examples.rs  mod.rs  repomap_update.rs
src/llm/: chat_with_tools.rs  client.rs  client_core.rs  compact_history.rs  history.rs  mod.rs  stream.rs  stream_tools.rs  symbol_edit.rs  tool_def.rs  tool_execution.rs  tool_runtime.rs  tool_use.rs  types.rs
src/llm/client_core/: network.rs
src/llm/tool_execution/: agent_loop.rs  dispatch.rs  requests.rs  streaming.rs
src/mcp/: client.rs  client_integration_test.rs  client_operational_test.rs  client_test.rs  client_unit_test.rs  mod.rs  server.rs  service.rs
src/planning/: execution_context.rs  llm_decomposer.rs  mod.rs  plan_execution.rs  plan_lifecycle.rs  plan_manager.rs  plan_statistics.rs  plan_status.rs  plan_storage.rs  prompt_builder.rs  step_executor.rs  task_analyzer.rs  task_executor.rs  task_planner.rs  task_types.rs  validator.rs
src/planning/llm_decomposer/: decomposer.rs  infer.rs  mod.rs  parser.rs  prompt.rs  types.rs
src/planning/task_analyzer/: confidence.rs  decomposition.rs  llm.rs  mod.rs  patterns.rs  tools_mapping.rs
src/session/: data.rs  error.rs  global.rs  manager.rs  mod.rs  store.rs  tests.rs
src/tools/: apply_patch.rs  apply_patch_fixed.rs  apply_patch_impl.rs  apply_patch_new.rs  apply_patch_unified.rs  common.rs  common_test.rs  create_patch.rs  edit.rs  edit_test.rs  execute.rs  find_file.rs  get_file_sha256.rs  list.rs  mod.rs  plan.rs  read.rs  read_many.rs  remote_tools.rs  replace_text_block.rs  search.rs  search_repomap.rs  search_text.rs  security.rs  session_manager.rs  symbol.rs  test_utils.rs  todo_read.rs  todo_write.rs  write.rs
src/tui/: commands.rs  commands_sessions.rs  commands_test.rs  completion.rs  diff_review.rs  event_handlers.rs  event_loop.rs  integration_test.rs  llm_response_handler.rs  mod.rs  mouse_test.rs  rendering.rs  state.rs  state_render.rs  state_test.rs  style_utils.rs  test_scroll.rs  test_scroll_basic.rs  test_scroll_formatting.rs  test_scroll_logging.rs  test_scroll_render.rs  test_token_display.rs  theme.rs  view.rs
(+57 files in other folders)
