[package]
name = "doge-code"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-width = "0.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
dotenvy = "0.15"
regex = "1"
globwalk = "0.9"
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
httptest = "0.16"
tempfile = "3"
