[package]
name = "doge-code"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dgc"
path = "src/main.rs"

[dependencies]
unicode-width = "0.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
glob = "0.3"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "zstd", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "process", "full"] }
dotenvy = "0.15"
dirs = "5.0"
atty = "0.2"
tempfile = "3"

#bincode = "1"
# enable UUID v7 generation for session IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tree-sitter = "0.25.9"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fastrand = "2"
diffy = "0.3"
sha2 = "0.10"
rust-embed = "8"
tera = "1.20"
num_cpus = "1.0"
ratatui = { version = "0.29.0", features = ["crossterm", "serde"] }
tokio-util = { version = "0.7", features = ["compat"] }
ignore = "0.4"
rand = "0.8"

# SeaORM for SQLite persistence
sea-orm = { version = "1.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "1.1" }
async-trait = "0.1"
async-stream = "0.3"
notify = "6.1"
notify-rust = "4"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
ansi-to-tui = "3.0"
rmcp = { version = "0.6.3", features = ["transport-streamable-http-server", "transport-io", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process", "client"] }
axum = "0.7"
schemars = "1.0"

[dev-dependencies]
httptest = "0.16"
